# compiler-optimizations

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assignment_1/: README.md
assignment_1/FunctionInfo/: FunctionInfo.cc  Makefile
assignment_1/LocalOpts/: LocalOpts.cc  Makefile
assignment_1/tests/algebraic/: Makefile  algebraic.c
assignment_1/tests/constfold/: Makefile  constfold.c
assignment_1/tests/loop/: Makefile  loop.c
assignment_1/tests/strength/: Makefile  strength.c
assignment_2/Dataflow/: available-support.cpp  available.cpp  dataflow.h  liveness.cpp  reaching.cpp
assignment_2/rishiranjan/: README
assignment_2/rishiranjan/Dataflow/: available-support.h  available.cpp  dataflow.h  liveness.cpp  reaching.cpp
assignment_2/tests/loop/: Makefile  loop.c
assignment_3/DCE/: Makefile  README.md
assignment_3/DCE/src/: Pass.cc
assignment_3/Dataflow/: dataflow.h  reaching.cpp
assignment_3/Dominators/: Makefile  README.md
assignment_3/Dominators/src/: Pass.cc
assignment_3/LICM/: Makefile  README.md
heap-liveness-analysis/: CMakeLists.txt  README.md
heap-liveness-analysis/include/: Common.h
heap-liveness-analysis/scripts/: plot.py
heap-liveness-analysis/src/: AccessPathDFA.cc  Common.cc  DeadMemoryFreePass.cc  MemoryGraphPass.cc  PointsToPass.cc
heap-liveness-analysis/tests/: Makefile  linked-list-test.c  test-interprocedural.c  test.c
include/: Common.h  Dataflow.h  Expression.h
src/: AvailableExpressions.cc  Common.cc  Dataflow.cc  Expression.cc  LivenessAnalysis.cc  LocalOpts.cc  ReachingDefinitions.cc
(+8 files in other folders)
